syntax = "proto3";

option csharp_namespace = "OrderServiceClient";

package OrderService;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Define the message types
message TicketStub {
	string movie_uuid = 1;
	int32 theater_room = 2;
	string movie_time = 3;
	string seat_num = 4;
}

message Userid {
	string uuid = 1;
}

message Orderid {
	string uuid = 1;
}

message PaymentMethod {
	string cc_num = 1;
	string exp_date = 2;
	string cvv = 3;
	string name = 4;
}

message IsPaid {
	bool is_paid = 1;
}

message OrderCreate {
	string user_uuid = 1;
	repeated string seat_num = 2;
	int32 theater_room = 3;
	string movie_time = 4;
	IsPaid is_paid = 5;
}

message Order {
	string uuid = 1;
	string user_uuid = 2;
	repeated TicketStub tickets = 3;
	IsPaid is_paid = 4;
	google.protobuf.Timestamp date_created = 5;
}

service OrderService {
	rpc CreateOrder(OrderCreate) returns (Order) {}
	rpc DeleteOrder(Orderid) returns (google.protobuf.Empty) {}
	rpc GetOrder(Orderid) returns (Order) {}
	rpc GetOrdersByUserId(Userid) returns (Orders) {}
}

message Orders {
	repeated Order order_list = 1;
}
